Bug 1033522 - Only initialize the Windows Group ID for plugin processes: other process types don't need it. Refactor the saved GRE dir to use a path rather than a non-threadsafe nsIFile object, r=jimm